# icassp2022-vocal-transcription

./: pyproject.toml
src/: MIDI.py  quantization.py
